# MongoCaching

./: .gitignore  CMakeLists.txt  README.md
include/cache/: Requests.hpp  TimeSeriesCache.hpp
include/mongo/: Connector.hpp  Service.hpp  SpotService.hpp  connect.hpp  requests.hpp
include/redis/: TS_Service.hpp  TimeSeriesService.hpp  bulk_float_patch.hpp  connectionPool.hpp
include/utils/: spots.hpp  time.hpp  tsQueue.hpp
src/: main.cpp  mongoAndRedis.cpp
src/cache/: CMakeLists.txt
src/cache/src/: TimeSeriesCache.cpp
src/mongo/: CMakeLists.txt  Connector.cpp  Service.cpp  SpotService.cpp  connectionStrings.txt
src/mongo/src/: Connector.cpp  Service.cpp  SpotService.cpp  connectionStrings.txt
src/redis/: CMakeLists.txt  TimeSeriesService.cpp
src/redis/src/: TimeSeriesService.cpp  boost_redis.cpp
